--- a/src/pretix/locale/nl/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/nl/LC_MESSAGES/djangojs.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-01 14:32+0000\n"
-"PO-Revision-Date: 2018-03-08 16:59+0000\n"
+"POT-Creation-Date: 2018-03-01 14:33+0000\n"
+"PO-Revision-Date: 2018-03-08 17:00+0000\n"
 "Last-Translator: Maarten Visscher <mail@maartenvisscher.nl>\n"
 "Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix-"
 "js/nl/>\n"
@@ -22,16 +22,16 @@ msgstr ""
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:62
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:68
 msgid "Marked as paid"
-msgstr ""
+msgstr "Gemarkeerd als betaald"
 
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:76
 msgid "Comment:"
-msgstr ""
+msgstr "Opmerking:"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:32
 msgid "Placed orders"
-msgstr ""
+msgstr "Gemaakte bestellingen"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:32
@@ -40,51 +40,52 @@ msgstr "Betaalde bestellingen"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:21
 msgid "Total revenue"
-msgstr ""
+msgstr "Volledige winst"
 
 #: pretix/plugins/stripe/static/pretixplugins/stripe/pretix-stripe.js:10
 msgid "Contacting Stripe …"
-msgstr ""
+msgstr "Verbinding maken met Stripe …"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:21
 msgid "QR Code"
-msgstr ""
+msgstr "QR-code"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:210
 msgid "The PDF background file could not be loaded for the following reason:"
-msgstr ""
+msgstr "Het PDF achtergrondbestand kon niet geladen worden met als reden:"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:359
+#, fuzzy
 msgid "Group of objects"
-msgstr ""
+msgstr "Groep van objecten"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:365
 msgid "Text object"
-msgstr ""
+msgstr "Tekstobject"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:367
 msgid "Barcode area"
-msgstr ""
+msgstr "Barcode gebied"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:369
 msgid "Object"
-msgstr ""
+msgstr "Object"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:373
 msgid "Ticket design"
-msgstr ""
+msgstr "Ticketontwerp"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:609
 msgid "Saving failed."
-msgstr ""
+msgstr "Opslaan mislukt."
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:656
 msgid "Do you really want to leave the editor without saving your changes?"
-msgstr ""
+msgstr "Wilt u de editor verlaten zonder uw wijzigingen op te slaan?"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:670
 msgid "Error while uploading your PDF file, please try again."
-msgstr ""
+msgstr "Probleem bij het uploaden van het PDF bestand, probeer opnieuw."
 
 #: pretix/static/pretixbase/js/asyncdownload.js:28
 #: pretix/static/pretixbase/js/asynctask.js:42
@@ -94,18 +95,20 @@ msgid ""
 "this takes longer than two minutes, please contact us or go back in your "
 "browser and try again."
 msgstr ""
+"Uw aanvraag wordt in behandeling genomen op de server. Als dit langer dan "
+"twee minuten duurt, neem contact met ons op of probeer opnieuw."
 
 #: pretix/static/pretixbase/js/asyncdownload.js:41
 #: pretix/static/pretixbase/js/asynctask.js:62
 #: pretix/static/pretixbase/js/asynctask.js:116
 #: pretix/static/pretixcontrol/js/ui/mail.js:23
 msgid "An error of type {code} occurred."
-msgstr ""
+msgstr "Er is een fout opgetreden met code {code}."
 
 #: pretix/static/pretixbase/js/asyncdownload.js:54
 #: pretix/static/pretixbase/js/asynctask.js:137
 msgid "We are processing your request …"
-msgstr ""
+msgstr "Uw aanvraag is in behandeling …"
 
 #: pretix/static/pretixbase/js/asyncdownload.js:55
 #: pretix/static/pretixbase/js/asynctask.js:138
@@ -114,6 +117,8 @@ msgid ""
 "than one minute, please check your internet connection and then reload this "
 "page and try again."
 msgstr ""
+"Uw aanvraag wordt naar de server verstuurd. Als dit langer dan een minuut "
+"duurt, controleer uw internetverbinding en probeer opnieuw."
 
 #: pretix/static/pretixbase/js/asynctask.js:38
 #: pretix/static/pretixbase/js/asynctask.js:90
@@ -121,48 +126,54 @@ msgid ""
 "Your request has been queued on the server and will now be processed. "
 "Depending on the size of your event, this might take up to a few minutes."
 msgstr ""
+"Uw aanvraag is in behandeling op de server. Afhankelijk van de grootte van "
+"het evenement kan dit enkele minuten duren."
 
 #: pretix/static/pretixbase/js/asynctask.js:65
 msgid ""
 "We currently cannot reach the server, but we keep trying. Last error code: "
 "{code}"
 msgstr ""
+"De server is op dit moment niet bereikbaar, we proberen opnieuw. Laatste "
+"foutcode: {code}"
 
 #: pretix/static/pretixbase/js/asynctask.js:107
 #: pretix/static/pretixcontrol/js/ui/mail.js:20
 msgid "The request took to long. Please try again."
-msgstr ""
+msgstr "De aanvraag duurde te lang, probeer alstublieft opnieuw."
 
 #: pretix/static/pretixbase/js/asynctask.js:119
 #: pretix/static/pretixcontrol/js/ui/mail.js:25
 msgid ""
 "We currently cannot reach the server. Please try again. Error code: {code}"
 msgstr ""
+"De server is op dit moment niet bereikbaar, probeer alstublieft opnieuw. "
+"Foutcode: {code}"
 
 #: pretix/static/pretixbase/js/asynctask.js:174
 #: pretix/static/pretixcontrol/js/ui/main.js:28
 msgid "Close message"
-msgstr ""
+msgstr "Sluit bericht"
 
 #: pretix/static/pretixcontrol/js/clipboard.js:23
 msgid "Copied!"
-msgstr ""
+msgstr "Gekopieerd!"
 
 #: pretix/static/pretixcontrol/js/clipboard.js:29
 msgid "Press Ctrl-C to copy!"
-msgstr ""
+msgstr "Gebruik Ctrl-C om te kopiëren!"
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:18
 msgid "An error has occurred."
-msgstr ""
+msgstr "Er is een fout opgetreden."
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:52
 msgid "Generating messages …"
-msgstr ""
+msgstr "Bezig met het genereren van berichten …"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:43
 msgid "Unknown error."
-msgstr ""
+msgstr "Onbekende fout."
 
 #: pretix/static/pretixcontrol/js/ui/main.js:242
 msgid "All"
@@ -170,15 +181,15 @@ msgstr "Alle"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:243
 msgid "None"
-msgstr ""
+msgstr "Geen"
 
 #: pretix/static/pretixcontrol/js/ui/question.js:41
 msgid "Others"
-msgstr ""
+msgstr "Andere"
 
 #: pretix/static/pretixcontrol/js/ui/question.js:70
 msgid "Count"
-msgstr ""
+msgstr "Aantal"
 
 #: pretix/static/pretixpresale/js/ui/cart.js:39
 msgid "The items in your cart are no longer reserved for you."
@@ -191,18 +202,18 @@ msgstr "Winkelwagen is verlopen"
 #: pretix/static/pretixpresale/js/ui/cart.js:46
 msgid "The items in your cart are reserved for you for one minute."
 msgid_plural "The items in your cart are reserved for you for {num} minutes."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "De items in uw winkelwagen zijn voor u gereserveerd voor één minuut."
+msgstr[1] "De items in uw winkelwagen zijn voor u gereserveerd voor {num} minuten."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:9
 msgctxt "widget"
 msgid "Sold out"
-msgstr ""
+msgstr "Uitverkocht"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:10
 msgctxt "widget"
 msgid "Buy"
-msgstr ""
+msgstr "Kopen"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:11
 msgctxt "widget"
@@ -217,49 +228,50 @@ msgstr "GRATIS"
 #: pretix/static/pretixpresale/js/widget/widget.js:13
 msgctxt "widget"
 msgid "from %(currency)s %(price)s"
-msgstr ""
+msgstr "vanaf %(currency)s %(price)s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:14
 msgctxt "widget"
 msgid "incl. %(rate)s% %(taxname)s"
-msgstr ""
+msgstr "incl. %(rate)s% %(taxname)s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:15
 msgctxt "widget"
 msgid "plus %(rate)s% %(taxname)s"
-msgstr ""
+msgstr "plus %(rate)s% %(taxname)s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:16
 #, javascript-format
 msgctxt "widget"
 msgid "currently available: %s"
-msgstr ""
+msgstr "momenteel beschikbaar: %s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:17
 msgctxt "widget"
 msgid "Only available with a voucher"
-msgstr ""
+msgstr "Alleen beschikbaar met een voucher"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:18
 #, javascript-format
 msgctxt "widget"
 msgid "minimum amount to order: %s"
-msgstr ""
+msgstr "minimale hoeveelheid om te bestellen: %s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:19
 msgctxt "widget"
 msgid "Close ticket shop"
-msgstr ""
+msgstr "Sluit ticketverkoop"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:20
 msgctxt "widget"
 msgid "The ticket shop could not be loaded."
-msgstr ""
+msgstr "De ticketverkoop kon niet geladen worden."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:21
 msgctxt "widget"
 msgid "The cart could not be created. Please try again later"
 msgstr ""
+"De winkelwagen kon niet gemaakt worden. Probeer alstublieft later opnieuw"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:22
 msgctxt "widget"
@@ -273,6 +285,9 @@ msgid ""
 "products, they will be added to your existing cart. Click on this message to "
 "continue checkout with your cart."
 msgstr ""
+"U heeft momenteel een actieve winkelwagen voor dit evenement. Als u meer "
+"producten selecteert worden deze toegevoegd aan uw bestaande winkelwagen. "
+"Klik op dit bericht om verder te gaan met uw winkelwagen."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:26
 msgctxt "widget"
@@ -280,16 +295,18 @@ msgid ""
 "ticketing powered by <a href=\"https://pretix.eu\" target=\"_blank\" rel="
 "\"noopener\">pretix</a>"
 msgstr ""
+"ticketsysteem mogelijk gemaakt door <a href=\"https://pretix.eu\" target=\""
+"_blank\" rel=\"noopener\">pretix</a>"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:27
 msgctxt "widget"
 msgid "Redeem a voucher"
-msgstr "Wissel een voucher in"
+msgstr "Verzilver een voucher"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:28
 msgctxt "widget"
 msgid "Redeem"
-msgstr ""
+msgstr "Verzilveren"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:29
 msgctxt "widget"
@@ -299,7 +316,7 @@ msgstr "Vouchercode"
 #: pretix/static/pretixpresale/js/widget/widget.js:30
 msgctxt "widget"
 msgid "Close"
-msgstr ""
+msgstr "Sluiten"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:31
 msgctxt "widget"
@@ -309,4 +326,4 @@ msgstr "Verdergaan"
 #: pretix/static/pretixpresale/js/widget/widget.js:32
 msgctxt "widget"
 msgid "See variations"
-msgstr ""
+msgstr "Zie variaties"
