--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-08 13:55+0000\n"
-"PO-Revision-Date: 2018-03-08 13:59+0000\n"
+"PO-Revision-Date: 2018-03-08 23:14+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: German "
 "<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
@@ -10305,7 +10305,7 @@ msgstr "Es gab einen Fehler beim Versenden der Bestätigungs-E-Mail."
 
 #: pretix/plugins/paypal/payment.py:293 pretix/plugins/stripe/payment.py:308
 msgid "Your input was invalid, please try again."
-msgstr "Die Eingabe war nicht korrekt, bitte erneut versuchen."
+msgstr "Deine Eingabe war ungültig, bitte erneut versuchen."
 
 #: pretix/plugins/paypal/payment.py:310 pretix/plugins/paypal/payment.py:323
 #: pretix/plugins/stripe/payment.py:323 pretix/plugins/stripe/payment.py:344
