--- a/src/pretix/locale/da/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/da/LC_MESSAGES/djangojs.po
@@ -1,89 +1,91 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# pretix translation file Danish
+# Copyright (C) 2016 the pretix authors
+# This file is distributed under the same license as the pretix package.
+# Raphael Michel <michel@rami.io>, 2016.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-06 17:25+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"POT-Creation-Date: 2017-12-05 15:54+0100\n"
+"PO-Revision-Date: 2018-03-08 18:03+0000\n"
+"Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
+"Language-Team: Danish <https://translate.pretix.eu/projects/pretix/pretix-"
+"js/da/>\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 2.19.1\n"
 
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:56
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:62
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:68
 msgid "Marked as paid"
-msgstr ""
+msgstr "Marker som betalt"
 
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:76
 msgid "Comment:"
-msgstr ""
+msgstr "Kommentar:"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:32
 msgid "Placed orders"
-msgstr ""
+msgstr "Afgivne bestillinger"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:32
 msgid "Paid orders"
-msgstr ""
+msgstr "Betalte bestillinger"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:21
 msgid "Total revenue"
-msgstr ""
+msgstr "Omsætning i alt"
 
 #: pretix/plugins/stripe/static/pretixplugins/stripe/pretix-stripe.js:10
 msgid "Contacting Stripe …"
-msgstr ""
+msgstr "Kontakter Stripe …"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:21
 msgid "QR Code"
-msgstr ""
+msgstr "QR-kode"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:210
 msgid "The PDF background file could not be loaded for the following reason:"
-msgstr ""
+msgstr "Baggrunds-pdf'en kunne ikke hentes af følgende grund:"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:359
 msgid "Group of objects"
-msgstr ""
+msgstr "Gruppe af objekter"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:365
 msgid "Text object"
-msgstr ""
+msgstr "Tekstobjekt"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:367
 msgid "Barcode area"
-msgstr ""
+msgstr "QR-kode-område"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:369
 msgid "Object"
-msgstr ""
+msgstr "Objekt"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:373
 msgid "Ticket design"
-msgstr ""
+msgstr "Billetdesign"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:609
 msgid "Saving failed."
-msgstr ""
+msgstr "Gem fejlede."
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:656
 msgid "Do you really want to leave the editor without saving your changes?"
 msgstr ""
+"Er du sikker på at du vil forlade editoren uden at gemme dine ændringer?"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:670
 msgid "Error while uploading your PDF file, please try again."
-msgstr ""
+msgstr "Fejl under upload af pdf. Prøv venligt igen."
 
 #: pretix/static/pretixbase/js/asyncdownload.js:28
 #: pretix/static/pretixbase/js/asynctask.js:42
@@ -93,18 +95,20 @@ msgid ""
 "this takes longer than two minutes, please contact us or go back in your "
 "browser and try again."
 msgstr ""
+"Din forespørgsel er under behandling. Hvis der går mere end to minutter, så "
+"kontakt os eller gå tilbage og prøv igen."
 
 #: pretix/static/pretixbase/js/asyncdownload.js:41
 #: pretix/static/pretixbase/js/asynctask.js:62
 #: pretix/static/pretixbase/js/asynctask.js:116
 #: pretix/static/pretixcontrol/js/ui/mail.js:23
 msgid "An error of type {code} occurred."
-msgstr ""
+msgstr "Der er sket en fejl. Fejlkode: {code}"
 
 #: pretix/static/pretixbase/js/asyncdownload.js:54
 #: pretix/static/pretixbase/js/asynctask.js:137
 msgid "We are processing your request …"
-msgstr ""
+msgstr "Vi behandler din forespørgsel …"
 
 #: pretix/static/pretixbase/js/asyncdownload.js:55
 #: pretix/static/pretixbase/js/asynctask.js:138
@@ -113,6 +117,8 @@ msgid ""
 "than one minute, please check your internet connection and then reload this "
 "page and try again."
 msgstr ""
+"Din forespørgsel bliver sendt til serveren. Hvis det tager mere end et "
+"minut, så tjek din internetforbindelse og prøv igen."
 
 #: pretix/static/pretixbase/js/asynctask.js:38
 #: pretix/static/pretixbase/js/asynctask.js:90
@@ -120,150 +126,156 @@ msgid ""
 "Your request has been queued on the server and will now be processed. "
 "Depending on the size of your event, this might take up to a few minutes."
 msgstr ""
+"Din forespørgsel er under behandling. Alt efter størrelse kan der gå op til "
+"et par minutter."
 
 #: pretix/static/pretixbase/js/asynctask.js:65
 msgid ""
 "We currently cannot reach the server, but we keep trying. Last error code: "
 "{code}"
 msgstr ""
+"Vi kan ikke komme i kontakt med serveren, men prøver igen. Seneste fejlkode: "
+"{code}"
 
 #: pretix/static/pretixbase/js/asynctask.js:107
 #: pretix/static/pretixcontrol/js/ui/mail.js:20
 msgid "The request took to long. Please try again."
-msgstr ""
+msgstr "Denne forespørgsel tog for lang tid. Prøv venligst igen."
 
 #: pretix/static/pretixbase/js/asynctask.js:119
 #: pretix/static/pretixcontrol/js/ui/mail.js:25
 msgid ""
 "We currently cannot reach the server. Please try again. Error code: {code}"
 msgstr ""
+"Vi kan ikke komme i kontakt med serveren. Prøv venligst igen. Fejlkode: "
+"{code}"
 
 #: pretix/static/pretixbase/js/asynctask.js:174
 #: pretix/static/pretixcontrol/js/ui/main.js:28
 msgid "Close message"
-msgstr ""
+msgstr "Luk besked"
 
 #: pretix/static/pretixcontrol/js/clipboard.js:23
 msgid "Copied!"
-msgstr ""
+msgstr "Kopieret!"
 
 #: pretix/static/pretixcontrol/js/clipboard.js:29
 msgid "Press Ctrl-C to copy!"
-msgstr ""
+msgstr "Tryk Ctrl-C eller ⌘-C for at kopiere!"
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:18
 msgid "An error has occurred."
-msgstr ""
+msgstr "Der er sket en fejl."
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:52
 msgid "Generating messages …"
-msgstr ""
+msgstr "Oprettet beskeder …"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:43
 msgid "Unknown error."
-msgstr ""
+msgstr "Ukendt fejl."
 
 #: pretix/static/pretixcontrol/js/ui/main.js:242
 msgid "All"
-msgstr ""
+msgstr "Alle"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:243
 msgid "None"
-msgstr ""
+msgstr "Ingen"
 
 #: pretix/static/pretixcontrol/js/ui/question.js:41
 msgid "Others"
-msgstr ""
+msgstr "Andre"
 
 #: pretix/static/pretixcontrol/js/ui/question.js:70
 msgid "Count"
-msgstr ""
+msgstr "Antal"
 
 #: pretix/static/pretixpresale/js/ui/cart.js:39
 msgid "The items in your cart are no longer reserved for you."
-msgstr ""
+msgstr "Varerne i din kurv er ikke længere reserverede for dig."
 
 #: pretix/static/pretixpresale/js/ui/cart.js:41
 msgid "Cart expired"
-msgstr ""
+msgstr "Kurv udløbet"
 
 #: pretix/static/pretixpresale/js/ui/cart.js:46
 msgid "The items in your cart are reserved for you for one minute."
 msgid_plural "The items in your cart are reserved for you for {num} minutes."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Varerne i din kurv er reserveret for dig i et minut."
+msgstr[1] "Varerne i din kurv er reserveret for dig i {num} minutter."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:9
 msgctxt "widget"
 msgid "Sold out"
-msgstr ""
+msgstr "Udsolgt"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:10
 msgctxt "widget"
 msgid "Buy"
-msgstr ""
+msgstr "Læg i kurv"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:11
 msgctxt "widget"
 msgid "Reserved"
-msgstr ""
+msgstr "Reserveret"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:12
 msgctxt "widget"
 msgid "FREE"
-msgstr ""
+msgstr "GRATIS"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:13
 msgctxt "widget"
 msgid "from %(currency)s %(price)s"
-msgstr ""
+msgstr "fra %(currency)s %(price)s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:14
 msgctxt "widget"
 msgid "incl. %(rate)s% %(taxname)s"
-msgstr ""
+msgstr "inkl. %(rate)s% %(taxname)s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:15
 msgctxt "widget"
 msgid "plus %(rate)s% %(taxname)s"
-msgstr ""
+msgstr "plus %(rate)s% %(taxname)s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:16
 #, javascript-format
 msgctxt "widget"
 msgid "currently available: %s"
-msgstr ""
+msgstr "tilgængelig: %s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:17
 msgctxt "widget"
 msgid "Only available with a voucher"
-msgstr ""
+msgstr "Kun tilgængelig med en voucher"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:18
 #, javascript-format
 msgctxt "widget"
 msgid "minimum amount to order: %s"
-msgstr ""
+msgstr "minimumsantal: %s"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:19
 msgctxt "widget"
 msgid "Close ticket shop"
-msgstr ""
+msgstr "Luk billetbutik"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:20
 msgctxt "widget"
 msgid "The ticket shop could not be loaded."
-msgstr ""
+msgstr "Billetbutikken kunne ikke hentes."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:21
 msgctxt "widget"
 msgid "The cart could not be created. Please try again later"
-msgstr ""
+msgstr "Kurven kunne ikke oprettes. Prøv igen senere."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:22
 msgctxt "widget"
 msgid "Waiting list"
-msgstr ""
+msgstr "Venteliste"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:23
 msgctxt "widget"
@@ -272,6 +284,9 @@ msgid ""
 "products, they will be added to your existing cart. Click on this message to "
 "continue checkout with your cart."
 msgstr ""
+"Du har allerede en aktiv kurv for dette arrangement. Hvis du vælge flere "
+"varer vil de blive tilføjet din eksisterende kurv. Klik på denne besked for "
+"at gå mod kassen med din kurv."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:26
 msgctxt "widget"
@@ -279,33 +294,35 @@ msgid ""
 "ticketing powered by <a href=\"https://pretix.eu\" target=\"_blank\" rel="
 "\"noopener\">pretix</a>"
 msgstr ""
+"billetsystem drevet af <a href=\"https://pretix.eu\" target=\"_blank\" rel=\""
+"noopener\">pretix</a>"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:27
 msgctxt "widget"
 msgid "Redeem a voucher"
-msgstr ""
+msgstr "Indløs voucher"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:28
 msgctxt "widget"
 msgid "Redeem"
-msgstr ""
+msgstr "Indløs"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:29
 msgctxt "widget"
 msgid "Voucher code"
-msgstr ""
+msgstr "Voucherkode"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:30
 msgctxt "widget"
 msgid "Close"
-msgstr ""
+msgstr "Luk"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:31
 msgctxt "widget"
 msgid "Continue"
-msgstr ""
+msgstr "Fortsæt"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:32
 msgctxt "widget"
 msgid "See variations"
-msgstr ""
+msgstr "Vis varianter"
