--- a/src/pretix/locale/pt_BR/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/pt_BR/LC_MESSAGES/djangojs.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-06 17:25+0000\n"
-"PO-Revision-Date: 2018-03-08 19:24+0000\n"
-"Last-Translator: anonymous <noreply@weblate.org>\n"
+"PO-Revision-Date: 2018-03-10 13:20+0000\n"
+"Last-Translator: Matheus Nunes <matheus@integrate.com.br>\n"
 "Language-Team: Portuguese (Brazil) "
 "<https://translate.pretix.eu/projects/pretix/pretix-js/pt_BR/>\n"
 "Language: pt_BR\n"
@@ -27,7 +27,7 @@ msgstr "Marcado como pago"
 
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:76
 msgid "Comment:"
-msgstr "Comentário"
+msgstr "Comentário:"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:32
@@ -44,8 +44,9 @@ msgid "Total revenue"
 msgstr "Rendimento total"
 
 #: pretix/plugins/stripe/static/pretixplugins/stripe/pretix-stripe.js:10
+#, fuzzy
 msgid "Contacting Stripe …"
-msgstr ""
+msgstr "Contacting Stripe …"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:21
 msgid "QR Code"
@@ -77,7 +78,7 @@ msgstr "Design de bilhetes"
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:609
 msgid "Saving failed."
-msgstr "Erro ao salvar"
+msgstr "Erro ao salvar."
 
 #: pretix/plugins/ticketoutputpdf/static/pretixplugins/ticketoutputpdf/editor.js:656
 msgid "Do you really want to leave the editor without saving your changes?"
@@ -272,7 +273,7 @@ msgstr "A loja não pode ser aberta."
 #: pretix/static/pretixpresale/js/widget/widget.js:21
 msgctxt "widget"
 msgid "The cart could not be created. Please try again later"
-msgstr "O carrinho não pode ser criado. Por favor, tente mais tarde."
+msgstr "O carrinho não pode ser criado. Por favor, tente mais tarde"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:22
 msgctxt "widget"
