Translated on translate.pretix.eu (German)
Currently translated at 100.0% (2234 of 2234 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/de/

powered by weblate

--- a/src/pretix/locale/de/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de/LC_MESSAGES/django.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-08 13:55+0000\n"
-"PO-Revision-Date: 2018-03-08 23:14+0000\n"
-"Last-Translator: Raphael Michel <michel@rami.io>\n"
+"PO-Revision-Date: 2018-03-10 13:20+0000\n"
+"Last-Translator: Felix Rindt <felix@rindt.me>\n"
 "Language-Team: German "
 "<https://translate.pretix.eu/projects/pretix/pretix/de/>\n"
 "Language: de\n"
@@ -379,7 +379,7 @@ msgstr "Dieses Konto ist deaktiviert."
 msgid ""
 "You already registered with that email address, please use the login form."
 msgstr ""
-"Sie haben sich bereits mit dieser E-Mail-Adresse registriert, bitte "
+"Sie haben sich bereits mit dieser E-Mail-Adresse registriert. Bitte "
 "verwenden Sie das Login-Formular."
 
 #: pretix/base/forms/auth.py:77 pretix/base/forms/auth.py:133
