--- a/src/pretix/locale/da/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/da/LC_MESSAGES/djangojs.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-05 15:54+0100\n"
-"PO-Revision-Date: 2018-03-09 13:06+0000\n"
-"Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
+"PO-Revision-Date: 2018-03-10 13:20+0000\n"
+"Last-Translator: Ture Gjørup <ture@ignatz.dk>\n"
 "Language-Team: Danish <https://translate.pretix.eu/projects/pretix/pretix-"
 "js/da/>\n"
 "Language: da\n"
@@ -22,7 +22,7 @@ msgstr ""
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:62
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:68
 msgid "Marked as paid"
-msgstr "Marker som betalt"
+msgstr "Markeret som betalt"
 
 #: pretix/plugins/banktransfer/static/pretixplugins/banktransfer/ui.js:76
 msgid "Comment:"
@@ -118,7 +118,7 @@ msgid ""
 "page and try again."
 msgstr ""
 "Din forespørgsel bliver sendt til serveren. Hvis det tager mere end et "
-"minut, så tjek din internetforbindelse og prøv igen."
+"minut, så tjek din internetforbindelse, genindlæs siden og prøv igen."
 
 #: pretix/static/pretixbase/js/asynctask.js:38
 #: pretix/static/pretixbase/js/asynctask.js:90
@@ -126,8 +126,8 @@ msgid ""
 "Your request has been queued on the server and will now be processed. "
 "Depending on the size of your event, this might take up to a few minutes."
 msgstr ""
-"Din forespørgsel er under behandling. Alt efter størrelse kan der gå op til "
-"et par minutter."
+"Din forespørgsel er under behandling. Alt efter størrelsen af din event kan "
+"der gå op til et par minutter."
 
 #: pretix/static/pretixbase/js/asynctask.js:65
 msgid ""
@@ -140,7 +140,7 @@ msgstr ""
 #: pretix/static/pretixbase/js/asynctask.js:107
 #: pretix/static/pretixcontrol/js/ui/mail.js:20
 msgid "The request took to long. Please try again."
-msgstr "Denne forespørgsel tog for lang tid. Prøv venligst igen."
+msgstr "Forespørgselen tog for lang tid. Prøv venligst igen."
 
 #: pretix/static/pretixbase/js/asynctask.js:119
 #: pretix/static/pretixcontrol/js/ui/mail.js:25
@@ -169,7 +169,7 @@ msgstr "Der er sket en fejl."
 
 #: pretix/static/pretixcontrol/js/ui/mail.js:52
 msgid "Generating messages …"
-msgstr "Oprettet beskeder …"
+msgstr "Opretter beskeder …"
 
 #: pretix/static/pretixcontrol/js/ui/main.js:43
 msgid "Unknown error."
