Translated on translate.pretix.eu (Dutch)
Currently translated at 30.0% (669 of 2224 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/nl/

powered by weblate

--- a/src/pretix/locale/nl/LC_MESSAGES/django.po
+++ b/src/pretix/locale/nl/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-01 14:33+0000\n"
 "PO-Revision-Date: 2018-03-09 15:27+0000\n"
-"Last-Translator: Maarten van den Berg <maartenberg1@gmail.com>\n"
+"Last-Translator: Maarten Visscher <mail@maartenvisscher.nl>\n"
 "Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix/nl/>"
 "\n"
 "Language: nl\n"
@@ -1952,9 +1952,9 @@ msgid ""
 "quotas, such that it is guaranteed that anyone with this voucher code does "
 "receive a ticket."
 msgstr ""
-"Als dit is ingeschakeld zal deze voucher worden afgetrokken van de quota van "
-"het product, zodat het zeker is dat iemand met deze vouchercode een kaartje "
-"kan krijgen."
+"Als dit is ingeschakeld zal deze voucher worden afgetrokken van de quotum "
+"van het product, zodat het zeker is dat iemand met deze vouchercode een "
+"ticket kan krijgen."
 
 #: pretix/base/models/vouchers.py:122
 msgid "Allow to bypass quota"
