Translated on translate.pretix.eu (Dutch)
Currently translated at 30.1% (671 of 2224 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/nl/

powered by weblate

--- a/src/pretix/locale/nl/LC_MESSAGES/django.po
+++ b/src/pretix/locale/nl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-01 14:33+0000\n"
-"PO-Revision-Date: 2018-03-09 15:29+0000\n"
-"Last-Translator: Maarten van den Berg <maartenberg1@gmail.com>\n"
+"PO-Revision-Date: 2018-03-09 15:34+0000\n"
+"Last-Translator: Maarten Visscher <mail@maartenvisscher.nl>\n"
 "Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix/nl/>"
 "\n"
 "Language: nl\n"
@@ -1965,8 +1965,8 @@ msgid ""
 "If activated, a holder of this voucher code can buy tickets, even if there "
 "are none left."
 msgstr ""
-"Als dit is ingeschakeld kan een houder van deze voucher kaartjes altijd "
-"kaartjes kopen, zelfs als er geen kaartjes meer over zijn."
+"Als dit is ingeschakeld kan een houder van deze voucher altijd tickets "
+"kopen, ook als er geen tickets meer beschikbaar zijn."
 
 #: pretix/base/models/vouchers.py:128
 msgid "Price mode"
