Translated on translate.pretix.eu (Dutch)
Currently translated at 30.3% (675 of 2224 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/nl/

powered by weblate

--- a/src/pretix/locale/nl/LC_MESSAGES/django.po
+++ b/src/pretix/locale/nl/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-01 14:33+0000\n"
 "PO-Revision-Date: 2018-03-09 15:39+0000\n"
-"Last-Translator: Maarten van den Berg <maartenberg1@gmail.com>\n"
+"Last-Translator: Maarten Visscher <mail@maartenvisscher.nl>\n"
 "Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix/nl/>"
 "\n"
 "Language: nl\n"
@@ -1990,8 +1990,8 @@ msgstr "Deze variant van het hierboven geselecteerde product wordt gebruikt."
 msgid ""
 "If enabled, the voucher is valid for any product affected by this quota."
 msgstr ""
-"Als dit is ingeschakeld is de voucher geldig voor ieder product getroffen "
-"door dit quotum."
+"Als dit is ingeschakeld is de voucher geldig voor elk product dat "
+"gebruikmaakt van deze quotum."
 
 #: pretix/base/models/vouchers.py:163
 #: pretix/control/templates/pretixcontrol/vouchers/index.html:84
