--- a/src/pretix/locale/da/LC_MESSAGES/django.po
+++ b/src/pretix/locale/da/LC_MESSAGES/django.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-05 15:54+0100\n"
-"PO-Revision-Date: 2018-03-09 13:07+0000\n"
-"Last-Translator: Mikkel Ricky <rimi@aarhus.dk>\n"
+"PO-Revision-Date: 2018-03-13 08:09+0000\n"
+"Last-Translator: Ture Gjørup <ture@ignatz.dk>\n"
 "Language-Team: Danish "
 "<https://translate.pretix.eu/projects/pretix/pretix/da/>\n"
 "Language: da\n"
@@ -93,6 +93,8 @@ msgid ""
 "Only include invoices issued on or after this date. Note that the invoice "
 "date does not always correspond to the order or payment date."
 msgstr ""
+"Inkluder kun fakturaer udstedt på eller efter denne dato. Bemærk at "
+"fakturadatoen ikke altid er den samme som ordre- eller betalingsdato."
 
 #: pretix/base/exporters/invoices.py:65
 #: pretix/control/templates/pretixcontrol/events/index.html:66
@@ -104,6 +106,8 @@ msgid ""
 "Only include invoices issued on or before this date. Note that the invoice "
 "date does not always correspond to the order or payment date."
 msgstr ""
+"Inkluder kun fakturaer udstedt på eller før denne dato. Bemærk at "
+"fakturadatoen ikke altid er den samme som ordre- eller betalingsdato."
 
 #: pretix/base/exporters/invoices.py:73 pretix/base/models/orders.py:146
 #: pretix/control/forms/filter.py:89
